Fixed animation mobile

--- a/src/components/section/section.module.scss
+++ b/src/components/section/section.module.scss
@@ -24,9 +24,9 @@
 
 .sectionReversed {
     @extend .structure;
-    right: -5vw;
+    left: -5vw;
     @media screen and (min-width: '768px') {
-        right: -10vw;
+        left: -10vw;
     }
 }
 
